feat: plugin against slip advice
